# lab

./: .env.sample  .gitignore  .gitmodules  .nojekyll  404.html  CNAME  Gemfile  LICENSE  README.md  _config.yml  _quarto.yml  about.html  about.qmd  docker-compose.yml  feed.xml  handler.js  index.html  index.qmd  index.xml  listings.json  package.json  projects.html  projects.qmd  pyproject.toml  references.bib  robots.txt  search.json  serverless.yml  settings.ini  sitemap.xml
sandbox/algebra_with_sympy_practice/: main.py  pyproject.toml
sandbox/array_api_practice/: README.md  main.py  pyproject.toml
sandbox/bevy_bullet_practice/: Cargo.toml
sandbox/bevy_bullet_practice/assets/bullet_ml/: change_direction.xml  hura.xml  pyramid.xml  simple.xml  spread2blt.xml  youmu_hououtenshi_luna_modoki.xml
sandbox/bevy_bullet_practice/bullet_plugin/: Cargo.toml
sandbox/bevy_bullet_practice/bullet_plugin/src/: asset.rs  component.rs  event.rs  lib.rs  runner.rs
sandbox/bevy_bullet_practice/bullet_plugin/src/asset/: bulletml.rs
sandbox/bevy_bullet_practice/bullet_plugin/src/component/: bullet.rs  runner.rs  spawner.rs
sandbox/bevy_bullet_practice/src/: main.rs
sandbox/bof_image_retrieval/: .gitignore  README.md  main.ipynb  pyproject.toml
sandbox/build123d_practice/: 2x4.py  2x4doublesocks.py  2x4socks.py  a5e_wall_mount.py  adx_s_base.py  battery_holder.py  cad_query_integration.py  camera_holder.py  camera_mounter.py  canmv_wall_mount.py  carry_arm_mount.py  clock_gen_case.py  cover.py  cp_casts.pickle  cp_casts.py  cp_points.py  dc_dc_box.py  dust_collector_joint.py  ether_con_wall_mount.py  example.py  fillament_gate.py  fillament_pulley.py  fillament_tunnel.py  hose_cleaner_joint.py  hub_mount.py  joint_tutorial.py  lcd_wall_mount.py  lego_tutorial.py  lidar_mounter.py  light_mounter.py  liva_mount.py  mounter.py  multitool_holder_wall.py  pail_can_mounter.py  plain_car.py  power_box.py  power_control_box.py  pressure_fit.py  pyproject.toml  rp4_mounter.py  (+18 more)
sandbox/build123d_practice/src/build123d_practice/: __init__.py
sandbox/cadquery_practice/: .gitignore  assemblies.py  box.py  case1.py  display_stand.py  fastener.py  hinge.py  hole_gauge.py  namecard_case.py  pyproject.toml  quickstart.py  sketch.py  test.py  thread.py
sandbox/cuda_professional_programming/: pyproject.toml
sandbox/cuda_professional_programming/chapter01/: hello.py
sandbox/cuda_professional_programming/chapter02/: check_device_info.py  check_dimension.py  check_thread_index.py  sum_arrays_on_gpu_small_case.py
sandbox/cuda_professional_programming/pycuda_tutorial/: execute_kernel.py  gpuarray.py
sandbox/feature-man/: README.md  pyproject.toml  pytest.ini
sandbox/feature-man/examples/: bof.py  codebook.pckl
sandbox/feature-man/scripts/: setup_jupyter.sh
sandbox/feature-man/src/feature_man/: __init__.py  context.py  exceptions.py  types.py
sandbox/feature-man/src/feature_man/ops/: __init__.py  akaze.py  base.py  brisk.py  brute_force_quantize.py  concat.py  (+18 more)
sandbox/feature-man/tests/: test_feature_man.py  test_ops_descriptor.py  test_ops_detector.py  test_ops_validate.py
sandbox/gradient_flow/: main.ipynb  main.py  pyproject.toml
sandbox/guided_filter_rs/: Cargo.toml
sandbox/guided_filter_rs/src/: main.rs
sandbox/gz_sim_plugin_practice/: CMakeLists.txt  README.md  SampleSystem.cc  SampleSystem.hh  SampleSystem2.cc  my_world.sdf
sandbox/image_retrieval_practice/: .gitignore  .igitignore  fv_orb.ipynb  fv_orb.py  memo.md  pyproject.toml  setup_jupyter.sh  vlad_orb.py  vocabrary_tree_gf_hod.py
sandbox/joblib_memory_practice/: main.py  pyproject.toml
sandbox/kagglebook_practice/: app.py  pyproject.toml
sandbox/kagglebook_practice/kagglebook_practice/: __init__.py  dataset.py
sandbox/kagglebook_practice/kagglebook_practice/ch01/: __init__.py  ch01.py  ch01_01_titanic.py
sandbox/kagglebook_practice/kagglebook_practice/ch02/: __init__.py  ch02_01_metrics.py  ch02_02_custom_usage.py  ch02_03_optimize.py  ch02_04_optimize_cv.py
sandbox/kagglebook_practice/kagglebook_practice/ch03/: __init__.py  ch03_01_numerical.py
sandbox/kagglebook_practice/script/: app.py  ch01.py
sandbox/kaze_practice/: .gitignore  Cargo.toml
sandbox/kaze_practice/modules/: alu.rs  decoder.rs  main.rs  memory.rs  pc.rs  program.rs  register.rs  selector.rs  td4.rs
sandbox/kaze_practice/src/: alu.rs  decoder.rs  main.rs  memory.rs  pc.rs  register.rs  selector.rs  td4.rs  td4_sim.rs
sandbox/knn_example/: main.py  pyproject.toml
sandbox/langchain_practice/: pyproject.toml
sandbox/mandelbrot_ray/: main.ipynb  main.py  pyproject.toml
sandbox/minesweeper-tutorial/: Cargo.toml
sandbox/minesweeper-tutorial/assets/fonts/: credits.md
sandbox/minesweeper-tutorial/assets/sprites/: credits.md
sandbox/minesweeper-tutorial/board_plugin/: Cargo.toml
sandbox/minesweeper-tutorial/board_plugin/src/: bounds.rs  events.rs  lib.rs
sandbox/minesweeper-tutorial/src/: main.rs
sandbox/nonlinear_optimization_algorithms/: active_set_method.py  augmented_lagrangian_method.py  common.py  gradient_descent.py  interior_point_method.py  newton_method.py  pyproject.toml  quasi_newton_method.py
sandbox/peachpy_avx_practice/: add.py  arith.py  blend.py  broadcast.py  logic.py  mask.py  pyproject.toml
sandbox/pico_sdk_practice/: CMakeLists.txt
sandbox/presentation/: presentation.ipynb  presentation.py  pyproject.toml
sandbox/py_opt_book_practice/: .gitignore  doit.sh  pyproject.toml
sandbox/py_opt_book_practice/2.tutorial/: lp.py  lp2.py  sle.py
sandbox/py_opt_book_practice/3.school/: class_assignment_problem.py
sandbox/python_concurrent_sort/: main.py  pyproject.toml
sandbox/python_icmp_ping/: main.py  pyproject.toml
sandbox/python_webidl_practice/: checkout_webidl_files.sh  main.py  pyproject.toml
sandbox/returns_practice/: practice.py  pyproject.toml
sandbox/rust-opengl-obj-loader/: .gitignore  Cargo.toml  build.rs
sandbox/rust-opengl-obj-loader/rsc/shader/: shader.fs  shader.vs
sandbox/rust-opengl-obj-loader/src/: context.rs  main.rs  obj.rs  shader.rs  support.rs  vertex.rs
(+3380 files in other folders)
