[tool.poetry]
name = "lab-note"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_note"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
numpy = "^1.23.3"
matplotlib = "^3.6.1"
pandas = "^1.5.0"
nbdev = "^2.3.7"
jupyter-cache = "^0.5.0"
scipy = "^1.9.2"
datasets = "^2.6.1"
soundfile = "^0.11.0"
torchaudio = "^0.12.1"
ffmpeg = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
