[tool.poetry]
name = "lab-note"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
readme = "README.md"
packages = [{include = "lab_note"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.23.3"
matplotlib = "^3.6.1"
pandas = "^1.5.0"
nbdev = "^2.3.7"
jupyter-cache = "^0.5.0"
scipy = "^1.9.2"
datasets = "^2.6.1"
soundfile = "^0.11.0"
ffmpeg = "^1.4"
pyarrow = "^12.0.1"
jupytext = "^1.14.7"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
