[tool.poetry]
name = "algebra-with-sympy-practice"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
algebra-with-sympy = "^0.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
