[package]
name = "bevy_bullet_practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug = ["bullet_plugin/debug", "bevy-inspector-egui"]

[dependencies]
bullet_plugin = { path = "bullet_plugin" }

# Hierarchy inspector debug
bevy-inspector-egui = { version = "0.18.1", optional = true }

[dependencies.bevy]
version = "^0.10"
default-features = false
features = ["bevy_sprite", "bevy_winit", "png"]

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "^0.10"
default-features = true
features = ["x11"]

[workspace]
members = [
    "bullet_plugin"
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level= 1
