[tool.poetry]
name = "bof_image_retrieval"
version = "0.1.0"
description = "Image retrieval using bof"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
opencv-python-headless = "3.4.2.16"
opencv-contrib-python-headless = "3.4.2.16"
scikit-learn = "^0.22.2"
plotly = "^4.6.0"
pandas = "^1.0.3"
scikit-image = "^0.16.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.1"
jupyter_nbextensions_configurator = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
