[project]
name = "build123d-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Masahiro Wada", email = "argon.argon.argon@gmail.com" }
]
dependencies = [
    "ipython",
    "ipykernel",
    "scikit-image",
    "ocp-vscode",
    "trianglesolver",
    "jupyter-cadquery",
    "cadquery-massembly",
    "bd-warehouse @ git+https://github.com/gumyr/bd_warehouse",
    "ocpsvg @ git+https://github.com/snoyer/ocpsvg",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.9.7",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/build123d_practice"]
