[project]
name = "build123d-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Masahiro Wada", email = "argon.argon.argon@gmail.com" }
]
dependencies = [
    "ipython",
    "ipykernel",
    "scikit-image",
    "ocp-vscode == 2.9.0",
    "trianglesolver",
    "jupyter-cadquery",
    "cadquery-massembly",
    "bd-warehouse @ git+https://github.com/gumyr/bd_warehouse",
    "ocpsvg @ git+https://github.com/snoyer/ocpsvg",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
    "build123d>=0.9.1",
]
readme = "README.md"
requires-python = ">= 3.12"
