[tool.poetry]
name = "cadquery-practice"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
readme = "README.md"
packages = [{include = "cadquery_practice"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.2"
ruff = "^0.0.261"
jupyter-cadquery = "^3.5.2"
cadquery = "^2.2.0"
ipython = "^8.12.0"
ipykernel = "^6.22.0"
cadquery-massembly = "^1.0.0"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pyright = "^1.1.302"
poethepoet = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
download = { "shell" = "curl -L -O https://www.matronics.dk/data/longship/files/products/vslot-2020_1.dxf"}