[tool.poetry]
name = "feature-man"
version = "0.1.0"
description = "Various feature extractors for images"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.3"
scipy = "^1.4.1"
scikit-image = "^0.16.2"
scikit-learn = "^0.22.2"
opencv-python-headless = "^4.2.0.34"
opencv-contrib-python-headless = "^4.2.0.34"
networkx = "^2.4"
smart-open = "^2.0.0"
ray = "^0.8.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
pytest-mypy = "^0.6.2"
pytest-black = "^0.3.8"
pytest-xdist = "^1.31.0"
pre-commit = "^2.3.0"
bandit = "^1.6.2"
black = "^19.10b0"
plotly = "^4.6.0"
pppiv = "^0.1.2"
jupyterlab = "^2.1.1"
pandas = "^1.0.3"
isort = "^4.3.21"

[tool.black]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
