[tool.poetry]
name = "vector_flow"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.4"
numba = "^0.49.1"
scikit-image = "^0.17.2"
matplotlib = "^3.2.1"
pyamg = "^4.0.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupytext = "^1.4.2"
pppiv = "^0.1.2"
black = "^19.10b0"
isort = "^4.3.21"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
