[package]
name = "guided_filter_rs"
version = "0.1.0"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
num-complex = "0.4.0"
num-traits = "0.2.14"
