[tool.poetry]
name = "image_retrieval_practice"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
opencv-python-headless = "^4.2.0"
opencv-contrib-python-headless = "^4.2.0"
scikit-learn = "^0.23.1"
scikit-image = "^0.17.2"
matplotlib = "^3.2.1"
ray = "^0.8.5"
faiss = "^1.5.3"
smart-open = "^2.0.0"

[tool.poetry.dev-dependencies]
jupytext = "^1.4.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
