[tool.poetry]
name = "kagglebook_practice"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.17"
scikit-learn = "^0.21.3"
streamlit = "^0.49.0"
xgboost = "^0.90.0"

[tool.poetry.dev-dependencies]
python-language-server = "^0.30.0"
pyls-isort = "^0.1.1"
pyls-black = "^0.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
