[package]
name = "modules"
version = "0.1.0"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
edition = "2018"
build = "./modules/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaze = "0.1.18"

[build-dependencies]
kaze = "0.1.18"