[tool.poetry]
name = "mandelbrot_ray"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
ray = "^0.8.5"
numba = "^0.49.1"
numpy = "^1.18.4"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
