[tool.poetry]
name = "studdi"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <masahiro_wada@caddi.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
matplotlib = "^3.3.2"
scikit-image = "^0.17.2"
nbdev = "^1.1.4"
jupytext = "^1.6.0"
RISE = "^5.6.1"
scipy = "^1.5.2"
black = "^20.8b1"
numba = "^0.51.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
