[tool.poetry]
name = "py-opt-book-practice"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
ipython = "^8.10.0"
notebook = "^6.5.2"
pandas = "^1.5.2"
cvxopt = "^1.3.0"
PuLP = "^2.7.0"
joblib = "^1.2.0"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
numpy = "^1.23.5"
Flask = "^2.2.2"
lxml = "^4.9.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
