[tool.poetry]
name = "python-webidl-practice"
version = "0.1.0"
description = ""
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
readme = "README.md"
packages = [{include = "python_webidl_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
pywebidl2 = "^0.1.7"
widlparser = "^1.1.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
