[package]
name = "rust-opengl-obj-loader"
version = "0.1.0"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_str_macro = "1.0.2"
cgmath = "0.18.0"
gl = "0.14.0"
glutin = "0.26.0"
itertools = "0.10.0"

[build-dependencies]
gl_generator = "0.14"
